# mcp-manager

./: .gitignore  README.md  pyproject.toml  setup.py
