[project]
name = "mcp-manager"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for managing other MCP servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "ruff>=0.8.0"
]

[project.scripts]
mcp-manager = "mcp_manager:main"